--- a/scss/Base/_sidenav.scss
+++ b/scss/Base/_sidenav.scss
@@ -1,6 +1,10 @@
 //=================================//
 //          STICKY SIDEBAR         
 //=================================//
+.wrap {
+    height: 100%;
+    width: 100%;
+}
 
 .wrap .sidenav {
     left: 0;
